--- a/app/data/technologies/codeigniter.yaml
+++ b/app/data/technologies/codeigniter.yaml
@@ -1,7 +1,7 @@
 info:
   name: CodeIgniter
   author: sh4dowByte
-  type: Web Framework
+  type: PHP Framework
   description: CodeIgniter is a powerful PHP framework with a small footprint for building dynamic web applications. It is known for its simplicity and speed.
   references:
     - https://codeigniter.com/
@@ -15,5 +15,4 @@ match:
         regex:
           - 'codeigniter'
           - 'ci_session'
-          - '_session'
         condition: and
